# zenkai

./: .flake8  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  feedback_alignment.ipynb  pydoc-markdown.yml  pyproject.toml  test_basic.ipynb  test_batch_memory.ipynb  test_feedback.ipynb  test_lm2.ipynb  test_wrap.ipynb  tox.ini
docs/source/: api.rst  conf.py  feedback_and_support.rst  getting_started.rst  index.rst
experimental/: genetic.ipynb  initialize.py
notebook_tests/: initialize.py  kikai_adapt.ipynb
old_docs/: ensemble.rst  feedback.rst  kaku.rst  kikai.rst  scikit.rst  tansaku.rst
tests/adapt/: test_adapt.py  test_post.py  test_scikit.py  test_scikit_mod.py
tests/bio/: test_fa.py  test_feedback_alignment.py  test_least_squares.py  test_reversible.py  test_target.py
tests/contain/: test_pipeline.py  test_post.py
tests/ensemble/: test_ensemble.py  test_ensemble_mod.py
tests/feedback/: test_feedback_alignment.py
tests/kaku/: fixtures.py  test_adapt.py  test_assess.py  test_backtarget.py  test_build.py  test_container.py  test_evaluation.py  test_grad.py  test_io.py  test_iterable.py  test_layer_assess.py  test_limit.py  test_lm2.py  test_machine.py  test_null.py  test_objective.py  test_optimize.py  test_populate.py  test_population.py  test_post.py  test_state.py  test_state2.py  test_steps.py  test_zen.py
tests/kikai/: test_adapt.py  test_back.py  test_backtarget.py  test_container.py  test_ensemble.py  test_fa.py  test_feedback_alignment.py  test_grad.py  test_hill.py  test_iterable.py  test_least_squares.py  test_network.py  test_null.py  test_pipeline.py  test_post.py  test_reversible.py  test_scikit.py  test_target.py  test_target_prop.py
tests/lm/: fixtures.py  test_autoencoder.py  test_dual.py  test_ensemble.py  test_feedback_alignment.py  test_global_step.py  test_grad.py  test_io.py  test_iterable.py  test_least_squares.py  test_lm2.py  test_machine.py  test_null.py  test_reversible.py  test_scikit.py  test_state2.py
tests/mod/: test_ensemble.py  test_filtering.py  test_grad.py  test_modules.py  test_noise.py  test_reversibles.py  test_scikit.py  test_wrappers.py
tests/mods/: test_ensemble_mods.py
tests/nnz/: test_assess.py  test_ensemble_mod.py  test_modules.py  test_reversibles.py  test_scikit_mod.py
tests/optim/: test_objective.py  test_optimize.py
tests/params/: test_module.py  test_params.py  test_pop_params.py
tests/rev/: test_reversible.py
tests/reverse/: test_reversible.py
tests/scikit/: test_ensembles.py  test_estimators.py  test_scikit.py  test_scikit_mod.py
tests/sensei/: test_base.py  test_materials.py  test_reporting.py  test_teaching.py
tests/sk/: test_scikit.py
tests/tako/: test_core.py  test_nodes.py  test_tako.py
tests/tansaku/: fixtures.py  test_aggregate.py  test_assessors.py  test_breeding.py  test_core.py  test_crossover.py  test_distortion.py  test_dividers.py  test_division.py  test_elitism.py  test_exploration.py  test_genetic.py  test_influencers.py  test_keep.py  test_manipulate.py  test_mappers.py  test_mixers.py  test_modifiers.py  test_module.py  test_noise.py  test_noisers.py  test_params.py  test_particle.py  test_pop_params.py  test_populators.py  test_reducers.py  test_reshape.py  test_select.py  test_slope.py  (+5 more)
zenkai/: __init__.py
(+343 files in other folders)
