[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "zenkai"
version = "0.0.9"
description = "A framework for flexibly developing beyond bakcpropagation."
homepage = "https://github.com/short-greg/zenkai"
repository = "https://github.com/short-greg/zenkai"
documentation = "https://zenkai.readthedocs.com"
authors = ["Greg Short <g.short@kurenai.waseda.jp>"]
license = "LICENSE"
readme = "README.md"
packages = [
    {include="zenkai"},
    {include="zenkai/bio"},
    {include="zenkai/ensemble"},
    {include="zenkai/memory"},
    {include="zenkai/optim"},
    {include="zenkai/params"},
    {include="zenkai/utils"},
    {include="zenkai/utils/convert"},
    {include="zenkai/utils/hard"},
    {include="zenkai/utils/memory"},
    {include="zenkai/utils/params"},
    {include="zenkai/utils/pop"},
    {include="zenkai/utils/reshape"},
    {include="zenkai/utils/update"},
    {include="zenkai/rev"},
    {include="zenkai/scikit"},
    {include="zenkai/tansaku"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = ">=1"
pandas = ">=1"
scikit-learn = ">=1.0.0"
# torch = {version = ">=2,<3"}
tqdm = ">=4.0"
scipy = ">=1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^6"
flake8 = "^3"
isort = "^5"
black = "^21"
blacken-docs = "^1"
